--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,152 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&display=swap');
+
+:root {
+	/*==========WARNA===========*/
+	--warna01: #1B262C;
+	--warna02: #00B7C2;
+	--warna03: #32E0C4;
+	--warna-text: #FFFFFF;
+	--warna-container: #0F4C75;
+	/*==========WARNA===========*/
+
+	/*==========FONT===========*/
+	--body-font: 'Roboto', sans-serif;
+	--h1-font: 2rem;
+	--h2-font: 1.5rem;
+	--h3-font: 1.25rem;
+	--normal-font: 1rem;
+	--small-font: 0.8rem;
+	--smaller-font: 0.7rem;
+
+	--bold-sm: 500;
+	--bold-md: 600;
+	--bold-lg: 700;
+	/*==========FONT===========*/
+
+	/*==========ETC==========*/
+	--shadow:5px 10px 0 rgb(169 107 106/10%);
+	--border-radius: 20px;
+	/*==========ETC==========*/
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	/*==========RESPONSIVE==========*/
+	@media screen and (max-width: 1024px) {
+		:root {
+			--h1-font: 1.75rem;
+			--h2-font: 1.25rem;
+			--h3-font: 1rem;
+			--normal-font: 0.9rem;
+			--small-font: 0.8rem;
+			--smaller-font: 0.7rem;
+		}
+	}
+	/*==========RESPONSIVE==========*/
+
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
+
+html{
+	scroll-behavior: smooth;
+}
+
+body,button,input,textarea {
+	font-family: var(--body-font);
+	font-size: var(--normal-font);
+}
+
+body{
+	background-color: var(--warna01);
+	line-height: 1.7;
+	color: var(--warna-text);
+}
+
+h1,h2,h3 {
+	color: var(--warna02);
+	font-weight: var(--bold-md);
+	line-height: 1.2;
+}
+
+ul {
+	list-style: none;
+}
+
+a{
+	text-decoration: none;
+}
+
+button {
+	cursor: pointer;
+	border: none;
+	outline: none;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+	vertical-align: middle;
+}
+
+/*================CLASS================*/
+.container {
+	max-width: 1080px;
+	padding-left: 15px;
+	padding-right: 15px;
+	margin: 0 auto;
+}
+
+.grid {
+	display: grid;
+}
+
+.section {
+	padding-top: 7rem;
+	padding-bottom: 2rem;
+}
+
+.section_title {
+	font-size: var(--h1-font);
+	margin-left: 0.8rem;
+	font-weight: var(--bold-lg);
+	position: relative;
+	margin-bottom: 3.7rem;
+}
+
+.section_title::before {
+	content: '';
+	background: url('./assets/dots-bg.svg');
+	height: 2.25rem;
+	width: 2.25rem;
+	position: absolute;
+	left: -0.8rem;
+	top: -0.8rem;
+}
+
+.btn {
+	padding: 0.7rem 2rem;
+	line-height: 1;
+	border-radius: 1.8rem;
+	box-shadow: 0 0 1px rgb(0, 0, 0);
+	color: #fff;
+	display: inline-block;
+	background-color: var(--warna02);
+	font-weight: var(--bold-lg);
+}
+
+@keyframes button-push {
+	50% {
+		transform: scale(0.8);
+	}
+
+	100% {
+		transform: scale(1.0);
+	}
+}
+
+.btn:hover {
+	animation: button-push 0.3s linear 1;
+}
+
